force-app/main/default/objects/ProductConsumed/ProductConsumed.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>