force-app/main/default/objects/ProductConsumed/fields/Active_Ingredient__c.field-meta.xml
<CustomField>
    <fullName>Active_Ingredient__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Active_Ingredients__c)</formula>
    <label>Active Ingredient</label>
    <type>Text</type>
</CustomField>