force-app/main/default/objects/ProductConsumed/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <formula>WorkOrderLineItem.Asset.Name &amp;&apos;-&apos;&amp; WorkOrderLineItem.Asset.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Name</label>
    <type>Text</type>
</CustomField>