force-app/main/default/objects/ProductConsumed/fields/Asset_Owner__c.field-meta.xml
<CustomField>
    <fullName>Asset_Owner__c</fullName>
    <formula>WorkOrderLineItem.Asset_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Owner</label>
    <type>Text</type>
</CustomField>