force-app/main/default/objects/ProductConsumed/fields/Damaged_Stolen__c.field-meta.xml
<CustomField>
    <fullName>Damaged_Stolen__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the Asset cannot be serviced/replaced</inlineHelpText>
    <label>Damaged/Stolen</label>
    <type>Checkbox</type>
</CustomField>