force-app/main/default/objects/ProductConsumed/fields/PCP__c.field-meta.xml
<CustomField>
    <fullName>PCP__c</fullName>
    <formula>PricebookEntry.Product2.P_C_P__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCP #</label>
    <type>Text</type>
</CustomField>