force-app/main/default/objects/ProductConsumed/fields/Product_Consumed_Translated__c.field-meta.xml
<CustomField>
    <fullName>Product_Consumed_Translated__c</fullName>
    <formula>IF( TEXT(WorkOrder.ServiceReportLanguage) == &apos;fr&apos;, 
   PricebookEntry.Product2.French_Product_Name__c ,
   PricebookEntry.Product2.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Consumed</label>
    <type>Text</type>
</CustomField>