force-app/main/default/objects/ProductConsumed/fields/UPC_Code__c.field-meta.xml
<CustomField>
    <fullName>UPC_Code__c</fullName>
    <formula>PricebookEntry.UPC_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UPC Code</label>
    <type>Text</type>
</CustomField>